# team_1_sample

./: .gitignore  README.md  pyproject.toml  requirements.txt  schema.json
acp_python/: contract_manager.py  memo.py
acp_python/utils/: job_helpers.py  memo_helpers.py
acp_sdk/: __init__.py  client.py  configs.py  contract_manager.py  env.py  exceptions.py  job.py  memo.py  models.py  offering.py  types.py
acp_sdk/utils/: job_actions.py  job_helpers.py
examples/: test_buyer.py  test_eval.py  test_seller.py
examples/acp_base/: .env.example  README.md  test.py  test_buyer.py  test_eval.py  test_seller.py
examples/acp_base/external_evaluation/: .env.example  README.md  buyer.py  eval.py  evaluator.py  seller.py
examples/acp_base/funds_transfer/: README.md  buyer.py  seller.py
examples/acp_base/helpers/: README.md  acp_helper_functions.py
examples/acp_base/polling_mode/: .env.example  buyer.py  evaluator.py  seller.py
examples/acp_base/self_evaluation/: .env  .env.example  README.md  buyer.py  check_eth_only.py  context.py  get_entity_id.py  get_entity_id2.py  new_seller.py  parser.py  print_env_rpc.py  report.py  seller.py  test_celeste_buyer.py  who_is_signing.py
examples/client_workflows/: buyer.py  evaluator.py  seller.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jp.py
schema/2025-05-12/: README.md  schema.json
virtuals_acp/: __init__.py  abi.py  alchemy.py  client.py  configs.py  contract_manager.py  env.py  exceptions.py  job.py  memo.py  models.py  offering.py
virtuals_acp/examples/: test_buyer.py
